Fix #976 .p-logo-section__items width. (#979)
Resolves a minor horizontal scrolling bug by introducing `width: 100%` on
.p-logo-section__items

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -723,6 +723,7 @@ $p-small-lh-diff: map-get($line-heights, default-text) -
   &__items {
     justify-content: flex-start;
     margin-left: 0;
+    width: 100%;
   }
 
   &__item,
